<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="300dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="30dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/exploreHomeAfterSearchFragmentRecyclerViewImageview2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/hotel_merdan_palace_turkey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exploreHomeAfterSearchFragmentRecyclerViewTextviewName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/meridian_palace"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exploreHomeAfterSearchFragmentRecyclerViewCancelledPrice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="10dp"
                android:text="@string/_7999"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/exploreHomeAfterSearchFragmentRecyclerViewTextviewPrice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/_7554"
                android:textColor="#FCEA0707"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>